<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <!-- Title  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="12sp" />

    <!-- Show SDK version  -->
    <TextView
        android:id="@+id/sdk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_version_text"
        android:textSize="12sp" />

    <!-- Start / Stop discovery buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="@string/start_discovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startDiscovery"
        android:id="@+id/start_discovery"/>

    <Button
        android:text="@string/stop_discovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopDiscovery"
        android:id="@+id/stop_discovery"/>
    </LinearLayout>

    <TextView
        android:id="@+id/discovery_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discovery_status_text"
        android:textSize="12sp" />

    <!-- Connect to FLIR ONE / Emulators buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/connect_flir_one"
            android:onClick="connectFlirOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_f1_text" />

        <Button
            android:id="@+id/connect_s1"
            android:onClick="connectSimulatorOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_sim1_text" />

        <Button
            android:id="@+id/connect_s2"
            android:onClick="connectSimulatorTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_sim2_text" />
    </LinearLayout>

    <Button
        android:id="@+id/disconnect_any"
        android:onClick="disconnect"
        android:text="@string/disconnect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperature"
        android:text="@string/temperature"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/facechecker"
        android:text="@string/facechecker"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label"
        android:text="@string/label"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/debugger"
        android:text="@string/debugger"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:minWidth="50dp"
            android:maxWidth="50dp"
            android:contentDescription="image with only visual image"
            />
    </LinearLayout>


</LinearLayout>